Ajouter des traductions

--- a/lang/en.json
+++ b/lang/en.json
@@ -229,6 +229,7 @@
     "Dominica": "Dominica",
     "Dominican Republic": "Dominican Republic",
     "Done.": "Done.",
+    "Don't have an account?": "Don't have an account?",
     "Download": "Download",
     "Download Invoice": "Download Invoice",
     "Drop file or click to choose": "Drop file or click to choose",
@@ -252,6 +253,7 @@
     "Encrypted environment file already exists.": "Encrypted environment file already exists.",
     "Encrypted environment file not found.": "Encrypted environment file not found.",
     "Ensure your account is using a long, random password to stay secure.": "Ensure your account is using a long, random password to stay secure.",
+    "Enter your email and password below to log in": "Enter your email and password below to log in",
     "Environment file already exists.": "Environment file already exists.",
     "Environment file not found.": "Environment file not found.",
     "Equatorial Guinea": "Equatorial Guinea",
@@ -388,6 +390,7 @@
     "Location": "Location",
     "Log in": "Log in",
     "Log In": "Log In",
+    "Log in to your account": "Log in to your account",
     "Log Out": "Log Out",
     "Log out": "Log out",
     "Log Out Other Browser Sessions": "Log Out Other Browser Sessions",
