--- a/lang/fr.json
+++ b/lang/fr.json
@@ -229,6 +229,7 @@
     "Dominica": "Dominique",
     "Dominican Republic": "République dominicaine",
     "Done.": "Terminé.",
+    "Don't have an account?": "Vous n'avez pas de compte ?",
     "Download": "Télécharger",
     "Download Invoice": "Télécharger la facture",
     "Drop file or click to choose": "Déposez le fichier ou cliquez pour choisir",
@@ -252,6 +253,7 @@
     "Encrypted environment file already exists.": "Le fichier d'environnement chiffré existe déjà.",
     "Encrypted environment file not found.": "Fichier d'environnement chiffré introuvable.",
     "Ensure your account is using a long, random password to stay secure.": "Assurez-vous d'utiliser un mot de passe long et aléatoire pour sécuriser votre compte.",
+    "Enter your email and password below to log in": "Entrez votre adresse e-mail et votre mot de passe ci-dessous pour vous connecter",
     "Environment file already exists.": "Le fichier d'environnement existe déjà.",
     "Environment file not found.": "Fichier d'environnement introuvable.",
     "Equatorial Guinea": "Guinée équatoriale",
@@ -388,6 +390,7 @@
     "Location": "Emplacement",
     "Log in": "Se connecter",
     "Log In": "Se connecter",
+    "Log in to your account": "Connectez-vous à votre compte",
     "Log Out": "Se déconnecter",
     "Log out": "Se déconnecter",
     "Log Out Other Browser Sessions": "Déconnecter les sessions ouvertes sur d'autres navigateurs",
