Ajouter des traductions

--- a/lang/en.json
+++ b/lang/en.json
@@ -61,6 +61,7 @@
     "API Token Permissions": "API Token Permissions",
     "API Tokens": "API Tokens",
     "API tokens allow third-party services to authenticate with our application on your behalf.": "API tokens allow third-party services to authenticate with our application on your behalf.",
+    "Appearance": "Appearance",
     "Apply": "Apply",
     "Apply Coupon": "Apply Coupon",
     "April": "April",
@@ -174,6 +175,7 @@
     "Congo, Democratic Republic": "Congo, Democratic Republic",
     "Congo, the Democratic Republic of the": "Congo, the Democratic Republic of the",
     "Constant": "Constant",
+    "Continue": "Continue",
     "Continue To Payment": "Continue To Payment",
     "Cook Islands": "Cook Islands",
     "Copy to clipboard": "Copy to clipboard",
@@ -218,13 +220,17 @@
     "Delete Resource": "Delete Resource",
     "Delete Selected": "Delete Selected",
     "Delete Team": "Delete Team",
+    "Delete your account and all of its resources": "Delete your account and all of its resources",
     "Denmark": "Denmark",
     "Detach": "Detach",
     "Detach Resource": "Detach Resource",
     "Detach Selected": "Detach Selected",
     "Details": "Details",
     "Disable": "Disable",
+    "Disabled": "Disabled",
+    "Disable 2FA": "Disable 2FA",
     "Djibouti": "Djibouti",
+    "Documentation": "Documentation",
     "Do you really want to leave? You have unsaved changes.": "Do you really want to leave? You have unsaved changes.",
     "Dominica": "Dominica",
     "Dominican Republic": "Dominican Republic",
@@ -249,11 +255,16 @@
     "Email Addresses": "Email Addresses",
     "Email Password Reset Link": "Email Password Reset Link",
     "Email Verification": "Email Verification",
+    "email.placeholder": "email@example.com",
     "Enable": "Enable",
+    "Enable 2FA": "Enable 2FA",
     "Encrypted environment file already exists.": "Encrypted environment file already exists.",
     "Encrypted environment file not found.": "Encrypted environment file not found.",
     "Ensure your account is using a long, random password to stay secure.": "Ensure your account is using a long, random password to stay secure.",
+    "Enter recovery code": "Enter recovery code",
+    "Enter your details below to create your account": "Enter your details below to create your account",
     "Enter your email and password below to log in": "Enter your email and password below to log in",
+    "Enter your email to receive a password reset link": "Enter your email to receive a password reset link",
     "Environment file already exists.": "Environment file already exists.",
     "Environment file not found.": "Environment file not found.",
     "Equatorial Guinea": "Equatorial Guinea",
@@ -413,6 +424,8 @@
     "Manage API Tokens": "Manage API Tokens",
     "Manage Role": "Manage Role",
     "Manage Team": "Manage Team",
+    "Manage your profile and account settings": "Manage your profile and account settings",
+    "Manage your two factor authentication settings": "Manage your two factor authentication settings",
     "Managing billing for :billableName": "Managing billing for :billableName",
     "March": "March",
     "Mark all as Read": "Mark all as read",
@@ -490,6 +503,9 @@
     "Only Trashed": "Only Trashed",
     "Open Invoices": "Open Invoices",
     "Original": "Original",
+    "Or, return to": "Or, return to",
+    "or you can": "or you can",
+    "or, enter the code manually": "or, enter the code manually",
     "Our billing management portal allows you to conveniently manage your subscription plan, payment method, and download your recent invoices.": "Our billing management portal allows you to conveniently manage your subscription plan, payment method, and download your recent invoices.",
     "Our billing management portal allows you to conveniently manage your subscription plan, payment methods, and download your recent invoices.": "Our billing management portal allows you to conveniently manage your subscription plan, payment methods, and download your recent invoices.",
     "Page Expired": "Page Expired",
@@ -503,6 +519,8 @@
     "Paraguay": "Paraguay",
     "Password": "Password",
     "password": "password",
+    "Password settings": "Password settings",
+    "password.placeholder": "password",
     "Payment Confirmation": "Payment Confirmation",
     "Payment Information": "Payment Information",
     "Payment information updated successfully.": "Payment information updated successfully.",
@@ -525,11 +543,14 @@
     "Please confirm access to your account by entering the authentication code provided by your authenticator application.": "Please confirm access to your account by entering the authentication code provided by your authenticator application.",
     "Please confirm your password before continuing.": "Please confirm your password before continuing.",
     "Please copy your new API token. For your security, it won't be shown again.": "Please copy your new API token. For your security, it won't be shown again.",
+    "Please enter your new password below": "Please enter your new password below",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.",
+    "Please proceed with caution, this cannot be undone.": "Please proceed with caution, this cannot be undone.",
     "Please provide a maximum of three invoice emails addresses.": "Please provide a maximum of three invoice emails addresses.",
     "Please provide the email address of the person you would like to add to this team.": "Please provide the email address of the person you would like to add to this team.",
     "Please set a default payment method before retrying payments.": "Please set a default payment method before retrying payments.",
     "Please set a default payment method before swapping plans.": "Please set a default payment method before swapping plans.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
     "Poland": "Poland",
     "Portugal": "Portugal",
     "Press / to search": "Press / to search",
@@ -554,6 +575,7 @@
     "Remove Photo": "Remove Photo",
     "Remove Team Member": "Remove Team Member",
     "Replicate": "Replicate",
+    "Repository": "Repository",
     "Required fields": "Required fields",
     "Resend Verification Email": "Resend Verification Email",
     "Reset Filters": "Reset Filters",
@@ -597,6 +619,7 @@
     "Sao Tome and Principe": "Sao Tome and Principe",
     "Saudi Arabia": "Saudi Arabia",
     "Save": "Save",
+    "Save Password": "Save Password",
     "Saved.": "Saved.",
     "Scroll to bottom": "Scroll to bottom",
     "Scroll to top": "Scroll to top",
@@ -617,6 +640,7 @@
     "Server Error": "Server Error",
     "Service Unavailable": "Service Unavailable",
     "Set as default": "Set as default",
+    "Settings": "Settings",
     "Setup Key": "Setup Key",
     "Seychelles": "Seychelles",
     "Show All Fields": "Show All Fields",
@@ -768,6 +792,7 @@
     "Tuvalu": "Tuvalu",
     "Two Factor Authentication": "Two Factor Authentication",
     "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.",
+    "Two Factor Authentication Settings": "Two-Factor Authentication Settings",
     "Type": "Type",
     "Uganda": "Uganda",
     "Ukraine": "Ukraine",
@@ -788,6 +813,7 @@
     "Update Payment Information": "Update Payment Information",
     "Update Payment Method": "Update Payment Method",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
+    "Update your name and email address": "Update your name and email address",
     "Uploading": "Uploading",
     "Uploading files... (:current/:total)": "Uploading files... (:current/:total)",
     "Uruguay": "Uruguay",
@@ -811,6 +837,7 @@
     "Virgin Islands, U.S.": "Virgin Islands, U.S.",
     "Wallis And Futuna": "Wallis and Futuna",
     "Wallis and Futuna": "Wallis and Futuna",
+    "Warning": "Warning",
     "We are processing your subscription. Once the subscription has successfully processed, this page will update automatically. Typically, this process should only take a few seconds.": "We are processing your subscription. Once the subscription has successfully processed, this page will update automatically. Typically, this process should only take a few seconds.",
     "We are unable to process your payment. Please contact customer support.": "We are unable to process your payment. Please contact customer support.",
     "We have emailed your password reset link!": "We have emailed your password reset link!",
@@ -820,10 +847,12 @@
     "Welcome Back!": "Welcome Back!",
     "Western Sahara": "Western Sahara",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.",
+    "When you enable two-factor authentication, you will be prompted for a secure pin during login. This pin can be retrieved from the TOTP-supported application on your phone.": "When you enable two-factor authentication, you will be prompted for a secure pin during login. This pin can be retrieved from the TOTP-supported application on your phone.",
     "Whoops": "Whoops",
     "Whoops!": "Whoops!",
     "Whoops! Something went wrong.": "Whoops! Something went wrong.",
     "With Trashed": "With Trashed",
+    "With two-factor authentication enabled, you will be prompted for a secure, random pin during login, which you can retrieve from the TOTP-supported application on your phone.": "With two-factor authentication enabled, you will be prompted for a secure, random pin during login, which you can retrieve from the TOTP-supported application on your phone.",   
     "Write": "Write",
     "Year To Date": "Year To Date",
     "Yearly": "Yearly",
