--- a/lang/fr.json
+++ b/lang/fr.json
@@ -61,6 +61,7 @@
     "API Token Permissions": "Autorisations de jeton API",
     "API Tokens": "Jeton API",
     "API tokens allow third-party services to authenticate with our application on your behalf.": "Les jetons API permettent à des services tiers de s'authentifier auprès de notre application en votre nom.",
+    "Appearance": "Apparence",
     "Apply": "Appliquer",
     "Apply Coupon": "Appliquer le coupon",
     "April": "Avril",
@@ -174,6 +175,7 @@
     "Congo, Democratic Republic": "République démocratique du Congo",
     "Congo, the Democratic Republic of the": "République démocratique du Congo",
     "Constant": "Toujours",
+    "Continue": "Continuer",
     "Continue To Payment": "Continuer vers le paiement",
     "Cook Islands": "Îles Cook",
     "Copy to clipboard": "Copier dans le presse-papier",
@@ -218,13 +220,17 @@
     "Delete Resource": "Supprimer la ressource",
     "Delete Selected": "Supprimer la sélection",
     "Delete Team": "Supprimer l'équipe",
+    "Delete your account and all of its resources": "Supprimer votre compte et toutes les données associées",
     "Denmark": "Danemark",
     "Detach": "Détacher",
     "Detach Resource": "Détacher la ressource",
     "Detach Selected": "Détacher la sélection",
     "Details": "Détails",
     "Disable": "Désactiver",
+    "Disabled": "Désactivé",
+    "Disable 2FA": "Désactiver 2FA",
     "Djibouti": "Djibouti",
+    "Documentation": "Documentation",
     "Do you really want to leave? You have unsaved changes.": "Voulez-vous vraiment partir ? Vous avez des données non sauvegardées.",
     "Dominica": "Dominique",
     "Dominican Republic": "République dominicaine",
@@ -249,11 +255,16 @@
     "Email Addresses": "Adresses e-mail",
     "Email Password Reset Link": "Lien de réinitialisation du mot de passe",
     "Email Verification": "Vérification de l'e-mail",
+    "email.placeholder": "email@exemple.com",
     "Enable": "Activer",
+    "Enable 2FA": "Activer 2FA",
     "Encrypted environment file already exists.": "Le fichier d'environnement chiffré existe déjà.",
     "Encrypted environment file not found.": "Fichier d'environnement chiffré introuvable.",
     "Ensure your account is using a long, random password to stay secure.": "Assurez-vous d'utiliser un mot de passe long et aléatoire pour sécuriser votre compte.",
+    "Enter recovery code": "Entrez le code de récupération",
+    "Enter your details below to create your account": "Entrez vos informations ci-dessous pour créer votre compte",
     "Enter your email and password below to log in": "Entrez votre adresse e-mail et votre mot de passe ci-dessous pour vous connecter",
+    "Enter your email to receive a password reset link": "Entrez votre adresse e-mail pour recevoir un lien de réinitialisation du mot de passe",
     "Environment file already exists.": "Le fichier d'environnement existe déjà.",
     "Environment file not found.": "Fichier d'environnement introuvable.",
     "Equatorial Guinea": "Guinée équatoriale",
@@ -413,7 +424,9 @@
     "Manage API Tokens": "Gérer les jetons API",
     "Manage Role": "Gérer le rôle",
     "Manage Team": "Gérer l'équipe",
+    "Manage your profile and account settings": "Gérer votre profil et les paramètres de votre compte.",
     "Managing billing for :billableName": "Gestion de la facturation pour :billableName",
+    "Manage your two factor authentication settings": "Gérer les paramètres de votre authentification à deux facteurs",
     "March": "Mars",
     "Mark all as Read": "Tout marquer comme lu",
     "Mark all notifications as read": "Marquer toutes les notifications comme lues",
@@ -489,7 +502,10 @@
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Une fois que votre compte est supprimé, toutes les données associées seront supprimées définitivement. Pour confirmer que vous voulez supprimer définitivement votre compte, renseignez votre mot de passe.",
     "Only Trashed": "Seulement les mis à la corbeille",
     "Open Invoices": "Factures ouvertes",
+    "or you can": "ou vous pouvez",
+    "or, enter the code manually": "ou, entrez le code manuellement",
     "Original": "Original",
+    "Or, return to": "Ou, retourner à",
     "Our billing management portal allows you to conveniently manage your subscription plan, payment method, and download your recent invoices.": "Notre portail de gestion de la facturation vous permet de gérer facilement votre abonnement, votre mode de paiement et de télécharger vos factures récentes.",
     "Our billing management portal allows you to conveniently manage your subscription plan, payment methods, and download your recent invoices.": "Notre portail de gestion de la facturation vous permet de gérer facilement votre plan d'abonnement, vos modes de paiement et de télécharger vos factures récentes.",
     "Page Expired": "Page expirée",
@@ -503,6 +519,8 @@
     "Paraguay": "Paraguay",
     "Password": "Mot de passe",
     "password": "mot de passe",
+    "Password settings": "Paramètres du mot de passe",
+    "password.placeholder": "Mot de passe",
     "Payment Confirmation": "Confirmation de paiement",
     "Payment Information": "Informations de paiement",
     "Payment information updated successfully.": "Informations de paiement mises à jour avec succès.",
@@ -525,11 +543,14 @@
     "Please confirm access to your account by entering the authentication code provided by your authenticator application.": "Veuillez confirmer l'accès à votre compte en entrant le code d'authentification fourni par votre application d'authentification.",
     "Please confirm your password before continuing.": "Veuillez confirmer votre mot de passe avant de continuer.",
     "Please copy your new API token. For your security, it won't be shown again.": "Veuillez copier votre nouveau token API. Pour votre sécurité, il ne sera pas ré-affiché.",
+    "Please enter your new password below": "Veuillez entrer votre nouveau mot de passe ci-dessous :",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Veuillez entrer votre mot de passe pour confirmer que vous voulez déconnecter toutes les autres sessions de navigateurs sur l'ensemble de vos appareils.",
+    "Please proceed with caution, this cannot be undone.": "Veuillez procéder avec prudence, cette action est irréversible.",
     "Please provide a maximum of three invoice emails addresses.": "Veuillez fournir au maximum trois adresses e-mail pour les factures.",
     "Please provide the email address of the person you would like to add to this team.": "Veuillez indiquer l'adresse e-mail de la personne que vous souhaitez ajouter à cette équipe.",
     "Please set a default payment method before retrying payments.": "Veuillez définir un mode de paiement par défaut avant de réessayer les paiements.",
     "Please set a default payment method before swapping plans.": "Veuillez définir un mode de paiement par défaut avant de changer de plan.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Veuillez vérifier votre adresse e-mail en cliquant sur le lien que nous venons de vous envoyer par e-mail.",
     "Poland": "Pologne",
     "Portugal": "Portugal",
     "Press / to search": "Appuyer sur / pour faire une recherche",
@@ -554,6 +575,7 @@
     "Remove Photo": "Supprimer l'image",
     "Remove Team Member": "Supprimer le membre d'équipe",
     "Replicate": "Reproduire",
+    "Repository": "Dépôt",
     "Required fields": "Champs requis",
     "Resend Verification Email": "Renvoyer l'e-mail de vérification",
     "Reset Filters": "Réinitialisation des filtres",
@@ -597,6 +619,7 @@
     "Sao Tome and Principe": "Sao Tomé-et-Principe",
     "Saudi Arabia": "Arabie Saoudite",
     "Save": "Sauvegarder",
+    "Save Password": "Sauvegarder le mot de passe",
     "Saved.": "Sauvegardé.",
     "Scroll to bottom": "Défiler vers le bas",
     "Scroll to top": "Défiler vers le haut",
@@ -617,6 +640,7 @@
     "Server Error": "Erreur serveur",
     "Service Unavailable": "Service indisponible",
     "Set as default": "Définir par défaut",
+    "Settings": "Paramètres",
     "Setup Key": "Clé de configuration",
     "Seychelles": "Seychelles",
     "Show All Fields": "Afficher tous les champs",
@@ -768,6 +792,7 @@
     "Tuvalu": "Tuvalu",
     "Two Factor Authentication": "Authentification à deux facteurs",
     "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "L'authentification à deux facteurs est maintenant activée. Scannez le code QR suivant à l'aide de l'application d'authentification de votre téléphone ou entrez la clé de configuration.",
+    "Two Factor Authentication Settings": "Paramètres de l'authentification à deux facteurs",
     "Type": "Type",
     "Uganda": "Ouganda",
     "Ukraine": "Ukraine",
@@ -788,6 +813,7 @@
     "Update Payment Information": "Mettre à jour les informations de paiement",
     "Update Payment Method": "Mettre à jour le moyen de paiement",
     "Update your account's profile information and email address.": "Modifier le profil associé à votre compte ainsi que votre adresse e-mail.",
+    "Update your name and email address": "Modifier votre nom et votre adresse e-mail",
     "Uploading": "Téléchargement",
     "Uploading files... (:current/:total)": "Téléchargement de fichiers... (:current/:total)",
     "Uruguay": "Uruguay",
@@ -811,6 +837,7 @@
     "Virgin Islands, U.S.": "Îles Vierges des États-Unis",
     "Wallis And Futuna": "Wallis et Futuna",
     "Wallis and Futuna": "Wallis et Futuna",
+    "Warning": "Avertissement",
     "We are processing your subscription. Once the subscription has successfully processed, this page will update automatically. Typically, this process should only take a few seconds.": "Nous traitons votre abonnement. Une fois l'abonnement traité avec succès, cette page se mettra à jour automatiquement. Généralement, ce processus ne devrait prendre que quelques secondes.",
     "We are unable to process your payment. Please contact customer support.": "Nous ne sommes pas en mesure de traiter votre paiement. Veuillez contacter le service client.",
     "We have emailed your password reset link!": "Nous avons envoyé par e-mail le lien de réinitialisation de votre mot de passe !",
@@ -820,10 +847,12 @@
     "Welcome Back!": "Bienvenue !",
     "Western Sahara": "Sahara occidental",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Lorsque l'authentification à deux facteurs est activée, vous serez invité à saisir un jeton aléatoire sécurisé lors de l'authentification. Vous pouvez récupérer ce jeton depuis l'application Google Authenticator de votre téléphone.",
+    "When you enable two-factor authentication, you will be prompted for a secure pin during login. This pin can be retrieved from the TOTP-supported application on your phone.": "Lorsque vous activez l'authentification à deux facteurs, vous serez invité à saisir un code PIN sécurisé lors de la connexion. Ce code PIN peut être récupéré depuis l'application compatible TOTP sur votre téléphone.",
     "Whoops": "Oups",
     "Whoops!": "Oups !",
     "Whoops! Something went wrong.": "Oups ! Un problème est survenu.",
     "With Trashed": "Avec ceux mis à la corbeille",
+    "With two-factor authentication enabled, you will be prompted for a secure, random pin during login, which you can retrieve from the TOTP-supported application on your phone.": "Avec l'authentification à deux facteurs activée, vous serez invité à saisir un code PIN aléatoire sécurisé lors de la connexion, que vous pouvez récupérer depuis l'application compatible TOTP sur votre téléphone.",
     "Write": "Écrire",
     "Year To Date": "Depuis le début de l'année",
     "Yearly": "Annuellement",
