Ajouter des traductions aux fichiers de langue

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,7 +23,7 @@
     "Action Name": "Name",
     "Action Status": "Status",
     "Action Target": "Target",
-    "Actions": "Actions",
+    "Actions": "Actions", 
     "Add": "Add",
     "Add :resource": "Add :resource",
     "Add a new team member to your team, allowing them to collaborate with you.": "Add a new team member to your team, allowing them to collaborate with you.",
@@ -129,6 +129,7 @@
     "British Indian Ocean Territory": "British Indian Ocean Territory",
     "Browser Sessions": "Browser Sessions",
     "Brunei Darussalam": "Brunei Darussalam",
+    "Building Type": "Building Type",
     "Bulgaria": "Bulgaria",
     "Burkina Faso": "Burkina Faso",
     "Burundi": "Burundi",
@@ -238,6 +239,7 @@
     "Don't have an account?": "Don't have an account?",
     "Download": "Download",
     "Download Invoice": "Download Invoice",
+    "Drawer": "Drawer",
     "Drop file or click to choose": "Drop file or click to choose",
     "Drop files or click to choose": "Drop files or click to choose",
     "Ecuador": "Ecuador",
@@ -425,6 +427,7 @@
     "Manage Role": "Manage Role",
     "Manage Team": "Manage Team",
     "Manage your profile and account settings": "Manage your profile and account settings",
+    "Manage your projects here": "Manage your projects here",
     "Manage your two factor authentication settings": "Manage your two factor authentication settings",
     "Managing billing for :billableName": "Managing billing for :billableName",
     "March": "March",
@@ -484,6 +487,7 @@
     "No payment methods on file.": "No payment methods on file.",
     "No payment scheduled.": "No payment scheduled.",
     "No Prior Data": "No Prior Data",
+    "No projects found.": "No projects found.",
     "No Results Found.": "No Results Found.",
     "Norfolk Island": "Norfolk Island",
     "Northern Mariana Islands": "Northern Mariana Islands",
@@ -493,6 +497,7 @@
     "Nova": "Nova",
     "Nova User": "Nova User",
     "November": "November",
+    "Number": "Number",
     "October": "October",
     "of": "of",
     "OK": "OK",
@@ -560,6 +565,10 @@
     "Privacy Policy": "Privacy Policy",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
+    "Projects": "Projects",
+    "Project": "Project",
+    "Project Name": "Project Name",
+    "# Project": "# Project",
     "Puerto Rico": "Puerto Rico",
     "Qatar": "Qatar",
     "Quarter To Date": "Quarter To Date",
@@ -669,6 +678,7 @@
     "Start Polling": "Start Polling",
     "Start polling": "Start polling",
     "State / County": "State / County",
+    "Status": "Status",
     "Stop Impersonating": "Stop Impersonating",
     "Stop Polling": "Stop Polling",
     "Stop polling": "Stop polling",
