--- a/lang/fr.json
+++ b/lang/fr.json
@@ -23,7 +23,7 @@
     "Action Name": "Nom",
     "Action Status": "Statut",
     "Action Target": "Cible",
-    "Actions": "Actions",
+    "Actions": "Actions", 
     "Add": "Ajouter",
     "Add :resource": "Ajouter :resource",
     "Add a new team member to your team, allowing them to collaborate with you.": "Ajouter un nouveau membre de l'équipe à votre équipe, lui permettant de collaborer avec vous.",
@@ -129,6 +129,7 @@
     "British Indian Ocean Territory": "Territoire britannique de l'océan Indien",
     "Browser Sessions": "Sessions de navigateur",
     "Brunei Darussalam": "Brunei Darussalam",
+    "Building Type": "Type de bâtiment",
     "Bulgaria": "Bulgarie",
     "Burkina Faso": "Burkina Faso",
     "Burundi": "Burundi",
@@ -238,6 +239,7 @@
     "Don't have an account?": "Vous n'avez pas de compte ?",
     "Download": "Télécharger",
     "Download Invoice": "Télécharger la facture",
+    "Drawer": "Dessinateur",
     "Drop file or click to choose": "Déposez le fichier ou cliquez pour choisir",
     "Drop files or click to choose": "Déposez les fichiers ou cliquez pour choisir",
     "Ecuador": "Équateur",
@@ -425,6 +427,7 @@
     "Manage Role": "Gérer le rôle",
     "Manage Team": "Gérer l'équipe",
     "Manage your profile and account settings": "Gérer votre profil et les paramètres de votre compte.",
+    "Manage your projects here": "Gérez vos projets ici",
     "Managing billing for :billableName": "Gestion de la facturation pour :billableName",
     "Manage your two factor authentication settings": "Gérer les paramètres de votre authentification à deux facteurs",
     "March": "Mars",
@@ -484,6 +487,7 @@
     "No payment methods on file.": "Aucun mode de paiement au dossier.",
     "No payment scheduled.": "Aucun paiement prévu.",
     "No Prior Data": "Aucune donnée prioritaire",
+    "No projects found.": "Aucun projet trouvé.",
     "No Results Found.": "Aucun résultat trouvé.",
     "Norfolk Island": "Île Norfolk",
     "Northern Mariana Islands": "Îles Mariannes du Nord",
@@ -493,6 +497,7 @@
     "Nova": "Nova",
     "Nova User": "Utilisateur Nova",
     "November": "Novembre",
+    "Number": "Nombre",
     "October": "Octobre",
     "of": "de",
     "OK": "OK",
@@ -560,6 +565,10 @@
     "Privacy Policy": "Politique de confidentialité",
     "Profile": "Profil",
     "Profile Information": "Informations du profil",
+    "Projects": "Projets",
+    "Project": "Projet",
+    "Project Name": "Nom du projet",
+    "# Project": "# Projet",
     "Puerto Rico": "Porto Rico",
     "Qatar": "Qatar",
     "Quarter To Date": "Trimestre en cours",
@@ -669,6 +678,7 @@
     "Start Polling": "Démarrer le vote",
     "Start polling": "Démarrer le vote",
     "State / County": "État / Région",
+    "Status": "Statut",
     "Stop Impersonating": "Arrêter d'utiliser un autre compte",
     "Stop Polling": "Arrêter le vote",
     "Stop polling": "Arrêter le vote",
