Ajouter des traductions

--- a/lang/en.json
+++ b/lang/en.json
@@ -167,6 +167,7 @@
     "Code": "Code",
     "Colombia": "Colombia",
     "Comoros": "Comoros",
+    "Concrete": "Concrete",
     "Confirm": "Confirm",
     "Confirm Billing Action": "Confirm Billing Action",
     "Confirm Password": "Confirm Password",
@@ -186,6 +187,8 @@
     "Coupon": "Coupon",
     "Coupon applied successfully.": "Coupon applied successfully.",
     "Create": "Create",
+    "Create a new project": "Create a new project",
+    "Create Project": "Create Project",
     "Create & Add Another": "Create & Add Another",
     "Create :resource": "Create :resource",
     "Create a new team to collaborate with others on projects.": "Create a new team to collaborate with others on projects.",
@@ -239,6 +242,7 @@
     "Don't have an account?": "Don't have an account?",
     "Download": "Download",
     "Download Invoice": "Download Invoice",
+    "Drainage Done": "Drainage Done",
     "Drawer": "Drawer",
     "Drop file or click to choose": "Drop file or click to choose",
     "Drop files or click to choose": "Drop files or click to choose",
@@ -250,6 +254,7 @@
     "Editor": "Editor",
     "Editor users have the ability to read, create, and update.": "Editor users have the ability to read, create, and update.",
     "Egypt": "Egypt",
+    "Electrical Done": "Electrical Done",
     "El Salvador": "El Salvador",
     "Email": "Email",
     "email": "email",
@@ -288,6 +293,7 @@
     "February": "February",
     "Fiji": "Fiji",
     "Filename": "Filename",
+    "Fill in the details to create a new project": "Fill in the details to create a new project",
     "Finish enabling two factor authentication.": "Finish enabling two factor authentication.",
     "Finland": "Finland",
     "For your security, please confirm your password to continue.": "For your security, please confirm your password to continue.",
@@ -498,6 +504,7 @@
     "Nova User": "Nova User",
     "November": "November",
     "Number": "Number",
+    "Number of Floors": "Number of Floors",
     "October": "October",
     "of": "of",
     "OK": "OK",
@@ -568,6 +575,7 @@
     "Projects": "Projects",
     "Project": "Project",
     "Project Name": "Project Name",
+    "Project Number": "Project Number",
     "# Project": "# Project",
     "Puerto Rico": "Puerto Rico",
     "Qatar": "Qatar",
@@ -635,6 +643,7 @@
     "Search": "Search",
     "Secure Area": "Secure Area",
     "Select": "Select",
+    "Select a building type": "Select a building type",
     "Select a different plan": "Select a different plan",
     "Select a log file...": "Select a log file...",
     "Select A New Photo": "Select A New Photo",
@@ -660,6 +669,7 @@
     "Signed in as": "Signed in as",
     "Singapore": "Singapore",
     "Sint Maarten (Dutch part)": "Sint Maarten",
+    "Sleeves Done": "Sleeves Done",
     "Slovakia": "Slovakia",
     "Slovenia": "Slovenia",
     "Soft Deleted": "Soft Deleted",
@@ -679,6 +689,7 @@
     "Start polling": "Start polling",
     "State / County": "State / County",
     "Status": "Status",
+    "Steel": "Steel",
     "Stop Impersonating": "Stop Impersonating",
     "Stop Polling": "Stop Polling",
     "Stop polling": "Stop polling",
@@ -701,6 +712,7 @@
     "Tajikistan": "Tajikistan",
     "Tanzania": "Tanzania",
     "Tanzania, United Republic of": "Tanzania, United Republic of",
+    "Task Status": "Task Status",
     "TAX": "TAX",
     "Team Details": "Team Details",
     "Team Invitation": "Team Invitation",
