--- a/lang/fr.json
+++ b/lang/fr.json
@@ -167,6 +167,7 @@
     "Code": "Code",
     "Colombia": "Colombie",
     "Comoros": "Comores",
+    "Concrete": "Béton",
     "Confirm": "Confirmer",
     "Confirm Billing Action": "Confirmer l'action de facturation",
     "Confirm Password": "Confirmer le mot de passe",
@@ -186,6 +187,8 @@
     "Coupon": "Code de réduction",
     "Coupon applied successfully.": "Coupon appliqué avec succès.",
     "Create": "Créer",
+    "Create a new project": "Créer un nouveau projet",
+    "Create Project": "Créer un projet",
     "Create & Add Another": "Créer & ajouter un autre",
     "Create :resource": "Créer :resource",
     "Create a new team to collaborate with others on projects.": "Créer une nouvelle équipe pour collaborer avec d'autres personnes sur des projets.",
@@ -239,6 +242,7 @@
     "Don't have an account?": "Vous n'avez pas de compte ?",
     "Download": "Télécharger",
     "Download Invoice": "Télécharger la facture",
+    "Drainage Done": "Besoins drainage terminé",
     "Drawer": "Dessinateur",
     "Drop file or click to choose": "Déposez le fichier ou cliquez pour choisir",
     "Drop files or click to choose": "Déposez les fichiers ou cliquez pour choisir",
@@ -250,6 +254,7 @@
     "Editor": "Éditeur",
     "Editor users have the ability to read, create, and update.": "Les éditeurs peuvent lire, créer et mettre à jour",
     "Egypt": "Égypte",
+    "Electrical Done": "Besoins électriques terminés",
     "El Salvador": "El Salvador",
     "Email": "E-mail",
     "email": "e-mail",
@@ -288,6 +293,7 @@
     "February": "Février",
     "Fiji": "Fidji",
     "Filename": "Nom du fichier",
+    "Fill in the details to create a new project": "Remplissez les détails pour créer un nouveau projet",
     "Finish enabling two factor authentication.": "Terminez l'activation de l'authentification à deux facteurs.",
     "Finland": "Finlande",
     "For your security, please confirm your password to continue.": "Par mesure de sécurité, veuillez confirmer votre mot de passe pour continuer.",
@@ -498,6 +504,7 @@
     "Nova User": "Utilisateur Nova",
     "November": "Novembre",
     "Number": "Nombre",
+    "Number of Floors": "Nombre d'étages",
     "October": "Octobre",
     "of": "de",
     "OK": "OK",
@@ -568,6 +575,7 @@
     "Projects": "Projets",
     "Project": "Projet",
     "Project Name": "Nom du projet",
+    "Project Number": "Numéro du projet",
     "# Project": "# Projet",
     "Puerto Rico": "Porto Rico",
     "Qatar": "Qatar",
@@ -635,6 +643,7 @@
     "Search": "Rechercher",
     "Secure Area": "Zone sécurisée",
     "Select": "Sélectionner",
+    "Select a building type": "Sélectionner un type de bâtiment",
     "Select a different plan": "Sélectionner une formule d'abonnement différente",
     "Select a log file...": "Sélectionner un fichier journal...",
     "Select A New Photo": "Sélectionner une nouvelle image",
@@ -660,6 +669,7 @@
     "Signed in as": "Connecté en tant que",
     "Singapore": "Singapour",
     "Sint Maarten (Dutch part)": "Saint Martin",
+    "Sleeves Done": "Sleeves terminées",
     "Slovakia": "Slovaquie",
     "Slovenia": "Slovénie",
     "Soft Deleted": "Supprimé (récupérable)",
@@ -679,6 +689,7 @@
     "Start polling": "Démarrer le vote",
     "State / County": "État / Région",
     "Status": "Statut",
+    "Steel": "Acier",
     "Stop Impersonating": "Arrêter d'utiliser un autre compte",
     "Stop Polling": "Arrêter le vote",
     "Stop polling": "Arrêter le vote",
@@ -701,6 +712,7 @@
     "Tajikistan": "Tadjikistan",
     "Tanzania": "Tanzanie",
     "Tanzania, United Republic of": "Tanzanie",
+    "Task Status": "Statut de la tâche",
     "TAX": "IMPÔT",
     "Team Details": "Détails de l'équipe",
     "Team Invitation": "Invitation d'équipe",
